--- a/style.css
+++ b/style.css
@@ -151,8 +151,6 @@ main {
     text-align: center;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s, background-color 0.3s;
-    position: relative;
-    overflow: hidden;
 }
 
 .feature-item:hover {
@@ -297,29 +295,22 @@ footer {
 
 .modal-content {
     background-color: var(--background-color);
-    margin: 2% auto; /* Reduced margin for larger view */
-    padding: 0; /* Remove padding to allow iframe to occupy full space */
-    border: none; /* Remove border if not needed */
-    width: 95%;
-    max-width: 1200px; /* Increased max-width */
-    min-width: 300px; /* Prevent too small modals */
-    max-height: 90vh; /* Prevent modals from exceeding viewport height */
+    margin: 5% auto; /* 5% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 90%;
+    max-width: 800px; /* Could be more or less, depending on screen size */
     border-radius: 10px;
     position: relative;
-    overflow: hidden; /* Hide overflow content */
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .modal-content iframe {
     width: 100%;
-    height: 700px; /* Adjust as necessary */
+    height: 450px;
     border: none;
     border-radius: 8px;
 }
 
-/* Close Button Styling */
 .close {
     color: var(--text-color);
     position: absolute;
@@ -337,7 +328,6 @@ footer {
     text-decoration: none;
 }
 
-/* Contact Form Styles */
 .contact-form h2 {
     margin-bottom: 20px;
     text-align: center;
@@ -346,7 +336,6 @@ footer {
 .contact-form form {
     display: flex;
     flex-direction: column;
-    padding: 20px;
 }
 
 .contact-form label {
@@ -373,33 +362,13 @@ footer {
     }
 }
 
-@media (max-width: 1024px) {
-    .modal-content {
-        max-width: 1000px;
-    }
-
-    .modal-content iframe {
-        height: 600px;
-    }
-}
-
 @media (max-width: 768px) {
-    .modal-content {
-        max-width: 90%;
+    .features ul {
+        flex-direction: column;
+        align-items: center;
     }
 
-    .modal-content iframe {
-        height: 500px;
-    }
-}
-
-@media (max-width: 480px) {
-    .modal-content {
-        max-width: 100%;
-        height: 80vh; /* 80% of viewport height */
-    }
-
-    .modal-content iframe {
-        height: 100%;
+    .testimonial-slider iframe {
+        height: 300px;
     }
 }
